2000-09-28  Bruno Haible  <haible@clisp.cons.org>

        * autoconf/aclocal.m4 (CL_SOCKLEN_T): New macro.
        * configure.in: Call it.
        * unixconf.h.in (SOCKLEN_T): New macro.
        * win32.d (SOCKLEN_T): Define as int.
        * socket.d (socket_getlocalname_aux, socket_getpeername,
           create_server_socket, accept_connection): Use the SOCKLEN_T type.

        * stream.d (iconv_mblen): Cast to avoid warning.
          (iconv_wcstombs): Likewise.
          (rd_ch_terminal3): Likewise.

2000-09-25  Bruno Haible  <haible@clisp.cons.org>

        * lispbibl.d (I80386): Define if __i386__ is defined. On OpenBSD,
          i386 and __i386 are not defined, only __i386__.
        * autoconf/aclocal.m4 (CL_WORDS_LITTLEENDIAN): Recognize __i386__
          as equivalent to __i386. For OpenBSD.

2000-09-21  Martin Atzmueller  <martin@atzmueller.net>

	* reploop.lisp (debug-backtrace): cleanup of unused variable.

2000-09-12  Bruno Haible  <haible@clisp.cons.org>

        Followup to Sam's 1999-04-07 patch.
        * compiler.lisp (c-form): Accept arrays as self-evaluating forms,
          consistently with eval.d:eva11().

2000-09-12  Bruno Haible  <haible@clisp.cons.org>

        * lispbibl.d (listen_char): Renamed from stream_listen.
          (listen_byte): New declaration.
        * debug.d (read_form): Update.
        * io.d (LISTEN, READ-CHAR-WILL-HANG-P, READ-CHAR-NO-HANG): Update.
        * stream.d (listen_char_synonym): Renamed from listen_synonym.
          (listen_byte_synonym): New function.
          (listen_char_concat): Renamed from listen_concat.
          (listen_byte_concat): New function.
          (listen_char_twoway): Renamed from listen_twoway.
          (listen_byte_twoway): New function.
          (listen_char_str_in): Renamed from listen_str_in.
          (listen_char_buff_in): Renamed from listen_buff_in.
          (listen_char_generic): Renamed from listen_generic.
          (listen_byte_ia8_unbuffered): New function.