@@ -1,5 +1,8 @@
 2000-09-28  Bruno Haible  <haible@clisp.cons.org>
 
+        * makemake.in: On AIX without gcc, use gcc-cccp.
+          (XCPP_POSTPROCESS): New variable.
+
         * autoconf/aclocal.m4 (CL_SOCKLEN_T): New macro.
         * configure.in: Call it.
         * unixconf.h.in (SOCKLEN_T): New macro.
